--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# PERSONALIZADO 
+
+/**/target/
+/**/.antlr/
+/**/.DS_Store
