--- a/runtime/package.json
+++ b/runtime/package.json
@@ -5,8 +5,7 @@
   "main": "runtime.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "exec": "node runtime.js",
-    "compile": "wat2wasm"
+    "exec": "node runtime.js"
   },
   "keywords": [
     "wasm",
@@ -20,6 +19,6 @@
   "author": "Cipriano",
   "license": "ISC",
   "dependencies": {
-    "wat-wasm": "^1.0.43"
+    "wabt": "^1.0.32"
   }
 }
